--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -58,7 +58,7 @@
 			      <div class="modal-content">
 <!-- 		        Modal Header -->
 			        <div class="modal-header">
-		          <h4 class="modal-title"><center>PROBLEM STATEMENT</center></h4>
+		          <h4 class="modal-title"><center></center></h4>
 			          <button type="button" class="close" data-dismiss="modal">&times;</button>
 			        </div>
 <!-- 		        Modal body -->
