--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -16,7 +16,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   
-
 <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/toastr.min.css">
@@ -24,6 +23,7 @@
 <link rel="stylesheet" href="css/pageStyle.css">
 <link rel="stylesheet" href="css/dryer.css">
 <link rel="stylesheet" href="css/result.css">
+
 <style>
 
 #coepLogo,#vlabLogo{
@@ -146,8 +146,11 @@ Copyrights &copy; COEPTECH - Virtual Labs
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.highcharts.com/highcharts.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.3.0/raphael.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.3.0/raphael.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.15/paper-full.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
@@ -161,10 +164,13 @@ Copyrights &copy; COEPTECH - Virtual Labs
 <script src="src/BatchProcessBottleFillingPiping.js"></script>
 <script src="src/BatchProcessBottleFillingInstrument.js"></script>
 <script src="src/BatchProcessBottleFillingMimic.js"></script>
+<script src="src/BatchProcessBottleFillingMimic2.js"></script>
+
 <script src="src/BatchProcessBottleFillingSquActivities.js"></script>
-<script src="src/BatchProcessBottleFillingPostQuestion.js"></script>
+<script src="src/BatchProcessDatasheet.js"></script>
 <script src="src/result.js"></script>
 <script src="src/timer.js"></script>
+<script src="src/batchProcessGraph.js"></script>
 
 <script>
 $( document ).ready(function() {
