--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -175,23 +175,12 @@ Copyrights &copy; COEPTECH - Virtual Labs
 <script src="src/batchProcessGraph.js"></script>
 
 <script>
+//result();
 $( document ).ready(function() {
     BatchProcessBottleFillingPiping();
  //   BatchProcessBottleFillingPipingMimic();
 });
-$('#report').on('click', function() {
-			$('#report').prop("hidden",true);
-		    html2canvas(document.querySelector("#mainDiv")).then(canvas => {
-		        // Append the screenshot canvas to the body
-		        document.body.appendChild(canvas);
-		        $("canvas").css("display","none");
-		        // Optionally save the screenshot as an image
-		        var link = document.createElement('a');
-		        link.download = 'BatchProcess_report.png';
-		        link.href = canvas.toDataURL();
-		        link.click();
-		    });
-		});
+
 </script>
 <script>
 toastr.options = {
